# maths

./: .gitignore  LICENSE  accounting.py  calculus.py  clamp.py  collatz.py  combinatorics.py  discrete.py  fibbonacci.py  finance.py  hamming_distance.py  hello.txt  kaprekar.py  lerp.py  linear_algebra.py  log  modulo.py  monte_carlo_pi.py  multiplication.py  note  pyproject.toml  requirements.txt  sieve.py  todo
maths/: calculus.py  clamp.py  collatz.py  combinatorics.py  discrete.py  distance.py  fibbonacci.py  hamming_distance.py  kaprekar.py  linear_algebra.py  linear_interpolation.py  modulo.py  multiplication.py  sieve_of_eratosthenes.py
src/maths/: accounting.py  clamp.py  fibbonacci.py
tests/: test_clamp.py  test_collatz.py  test_distance.py  test_hamming_distance.py  test_linear_interpolation.py  test_multiplication.py  test_sieve.py
